minimal working canvas and config loading

--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>SLEEP GAME</title>
+	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
 	<script src="js/main.js"></script>
-	<script src="js/jquery-3.6.0.min.js"></script>
-	<script src="js/svg.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-
+<canvas></canvas>	
 </body>
 </html>
