--- a/index.html
+++ b/index.html
@@ -5,13 +5,31 @@
 	<title>SLEEP GAME</title>
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0.16/dist/svg.min.js"></script>
+	
 	<script src="js/main.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<canvas></canvas>	
+<!--canvas>
+
+</canvas-->
+<div id="canvas">
+	<div class="clock">
+		<span class="hour"></span>
+		<span class="minute"></span>
+		<span class="dot"></span>
+	</div>
+	<!--div id="playbutton"></div-->
+
+	<div id="controls_speed">
+		<div id="pause" class="controlsSpeed"><img src="img/pause.png"></div>
+		<div id="play" class="controlsSpeed"><img src="img/play.png"></div>
+		<div id="faster" class="controlsSpeed"><img src="img/faster.png"></div>
+		<div id="fastest" class="controlsSpeed"><img src="img/fastest.png"></div>
+	</div>
+</div>
 </body>
 </html>
