refactoring, still broken

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0.16/dist/svg.min.js"></script>
 	
 	<script src="js/SunCalc.js"></script>
+	<script src="js/util.js"></script>
+	<script src="js/sun.js"></script>
 	<script src="js/main.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="main.css">
@@ -21,7 +23,7 @@
 		<span class="minute"></span>
 		<span class="dot"></span>
 	</div>
-	<div id="playbutton" class="sunCicle"></div>
+	<div id="playbutton"></div>
 
 	<div id="controls_speed">
 		<div id="pause" class="controlsSpeed"><img src="img/pause.png"></div>
