simulation p5js skeleton

--- a/index.html
+++ b/index.html
@@ -1,38 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>SLEEP GAME</title>
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<script src="js/p5.min.js"></script>
+	<script src="js/sketch.js"></script>
 </head>
 <body>
-	<div id="canvas">
-		<div class="clock">
-			<span class="hour"></span>
-			<span class="minute"></span>
-			<span class="dot"></span>
-		</div>
-		<div id="playbutton"></div>
 
-		<div id="controls_speed">
-			<div id="pause" class="controlsSpeed"><img src="img/pause.png"></div>
-			<div id="play" class="controlsSpeed"><img src="img/play.png"></div>
-			<div id="faster" class="controlsSpeed"><img src="img/faster.png"></div>
-			<div id="fastest" class="controlsSpeed"><img src="img/fastest.png"></div>
-		</div>
-
-		<div id="info"></div>
-	</div>
-	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/jquery-ui-dist@1.12.1/jquery-ui.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0.16/dist/svg.min.js"></script>
-	
-	<!--script src="js/SunCalc.js"></script-->
-	
-	<script src="js/util.js"></script>
-	<script src="js/lookup.js"></script>
-	<script src="js/main.js"></script>
 </body>
 </html>
