--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
 	<title>SLEEP GAME</title>
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="js/p5.min.js"></script>
+	<script src="js/main.js"></script>
+	<script src="js/bar.js"></script>
 	<script src="js/sketch.js"></script>
 </head>
 <body>
