--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="js/p5.min.js"></script>
+	<script src="js/main.js"></script>
 	<script src="js/sketch.js"></script>
 </head>
 <body>
